			SWI-Prolog ChangeLog
			====================

VERSION 4.0.6
=============

  * PORT: Fixed string-handling on 64-bit platforms.  Made the compilation
    of all tools and standard libraries fairly clean on the INTEL Itanium
    (Merced) processor using gcc and Linux.  Thanks to the SuSE team for
    providing access to their hardware.

  * PORT: Included some patches from the SuSE team.

  * ENHANCED: MT-Version: install libpl.a as libplmt.a for the
    multi-threaded version.

  * FIXED: MT-Version: open xterm for thread on systems using the
    /dev/pts filesystem.  On these terminals the xterm is started
    using <basename of slave>/<descriptor>

  * FIXED: MT-Version: deadlock and corruption problem.  Modified
    mutex-structure slightly, so new problems may have been be
    introduced.

VERSION 4.0.5
=============

  * FIXED: Actually make re-hashing predicates work.  This bug causes
    large (dynamic) predicates that are queried while they are build
    to show linear rather than constant-time access behaviour.  Perfomance
    difference on victim programs can be dramatic!

  * ENHANCED: GNU-readline interface.  Detect useful additions from readline
    4.2, avoid type-conflicts and handle re-entrance through XPCE much more
    cleanly as well as aborts.

  * PORT: Many C-compiler warnings, making the native IRIX cc compile
    SWI-Prolog silently.  Improved detection of wait() variations.
    Thanks to Jean Wang for providing me with access to their machine.

  * ENHANCED: Handling of prolog_edit:select_location/3.  Enhancement
    exploited by XPCE to use GUI-based selection if running from GUI.

  * ADDED: -s file to load a script-file in addition to the user
    initialisation file.

  * ADDED: -q commandline option to make the system operate silently.

  * ADDED: PrologScript support using #!, providing direct scripting
    in Unix and additional parameters on MS-Windows.

  * FIXED: Wipe the anonymous clauses for meta-calling on $dcall/1 as